Implemented node digital routes to index.js and some files

--- a/text/login.html
+++ b/text/login.html
@@ -34,7 +34,7 @@
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
-    <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="/css/login.css">
     
       
 
