--- a/text/makepost.html
+++ b/text/makepost.html
@@ -34,7 +34,7 @@
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
-    <link rel="stylesheet" href="../styles/makepost.css">
+    <link rel="stylesheet" href="/css/makepost.css">
       
 
 </head>
