--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
-    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="/css/index.css">
     
 
 </head>
@@ -54,7 +54,7 @@
             <img class="responsive" src="image/output.png" alt="">
         </div>
         <h1>Welcome to Huh!</h1>
-        <a href="./text/login.html" class="btn btn-warning" role="button">Sign up / Login</a>
+        <a href="/login" class="btn btn-warning" role="button">Sign up / Login</a>
     </div>
 
     <!-- our own footer goes here-->
