--- a/text/main.html
+++ b/text/main.html
@@ -36,7 +36,7 @@
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="/css/main.css">
    
 </head>
 
