--- a/text/profile.html
+++ b/text/profile.html
@@ -50,7 +50,7 @@
                 <div class="profile mr-3">
                   <img src="https://images.unsplash.com/photo-1522075469751-3a6694fb2f61?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80"
                     alt="..." width="130" class="rounded mb-2 img-thumbnail">
-                  <a href="#" class="btn btn-outline-dark btn-sm btn-block">Edit profile</a>
+                  <a href="./editProfile.html" class="btn btn-outline-dark btn-sm btn-block">Edit profile</a>
                 </div>
                 <div class="media-body mb-5 text-white">
                   <h4 class="mt-0 mb-0">Mark Williams</h4>
@@ -65,19 +65,22 @@
                 <li class="list-inline-item">
                   <h5 class="font-weight-bold mb-0 d-block">215</h5>
                   <small class="text-muted">
-                    <i class="fas fa-image mr-1"></i>Posts
+                    <i class="fas fa-image mr-1"></i>
+                    <a href="#">Posts</a>
                   </small>
                 </li>
                 <li class="list-inline-item">
                   <h5 class="font-weight-bold mb-0 d-block">745</h5>
                   <small class="text-muted">
-                    <i class="fas fa-user mr-1"></i>Followers
+                    <i class="fas fa-user mr-1"></i>
+                    <a href="./followers.html">Followers</a>
                   </small>
                 </li>
                 <li class="list-inline-item">
                   <h5 class="font-weight-bold mb-0 d-block">340</h5>
                   <small class="text-muted">
-                    <i class="fas fa-user mr-1"></i>Following
+                    <i class="fas fa-user mr-1"></i>
+                    <a href="./following.html">Following</a>
                   </small>
                 </li>
               </ul>
