--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <img class="responsive" src="image/output.png" alt="">
         </div>
         <h1>Welcome to Huh!</h1>
-        <a href="/login" class="btn btn-warning" role="button">Sign up / Login</a>
+        <a href="/signup" class="btn btn-warning" role="button">Sign up / Login</a>
     </div>
 
     <!-- our own footer goes here-->
