--- a/text/signup.html
+++ b/text/signup.html
@@ -49,13 +49,14 @@
     <nav id="navbarPlaceholder"></nav>
 
     <!-- the body of your page goes here -->
-    <h1>Login</h1>
-    <form action="/loggingin" method="POST">
+    <h1>Signup</h1>
+    <form action="/submitUser" method="POST">
     <label>Email:</label>
     <input name='email' type='text' placeholder='email' required>
     <label>Password:</label>
     <input name='password' type='password' placeholder='password'> <br>
-    <button type="submit">Log In</button>
+    <button type="submit">Signup </button>
+    <p>Already have an account? <a href="/login">Login</a></p>
     </form>
     <!-- our own footer goes here-->
     <!-- <nav id="footerPlaceholder"></nav> -->
