Added more fields for user docs. Implemented makepost routes and defined posts collection. Added new folder called routes. Make slight edits to databaseconnection and index to get everything to work.

--- a/text/main.html
+++ b/text/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My BCIT Project</title>
+    <title>Main Page</title>
     <meta name="comp1800 template" content="My 1800 App">
 
     <!------------------------>
@@ -25,13 +25,6 @@
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-
 
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
@@ -97,6 +90,11 @@
             </div>
         </div>
     </template>
+
+    <!-- Temporary Button to go to makepost page, Can't see nav yet -->
+    <a href="/makepost" class="btn btn-primary">
+      <i class="bi bi-pencil-square"></i> Make a Post
+    </a>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
