--- a/text/makepost.html
+++ b/text/makepost.html
@@ -21,50 +21,64 @@
     </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-    <!-------------------------------------------------------->
-    <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
-    <!-------------------------------------------------------->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-
-    <!-------------------------------------------->
-    <!-- Other libraries and styles of your own -->
-    <!-------------------------------------------->
     <link rel="stylesheet" href="/css/makepost.css">
       
 
 </head>
 
 <body>
-    <!------------------------------>
-    <!-- Your HTML Layout go here -->
-    <!------------------------------>
-
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
     <!-- Make a post container  -->
     <div class="container mt-5">
-      <h2>Make a Post</h2>
-      <form id="postForm">
-          <label for="title" class="form-label">Title:</label>
-          <input type="text" id="title" class="form-control" placeholder="Enter Your Title" required>
-
-          <br>
-
-          <label for="description" class="form-label">Enter Text:</label>
-          <input type="text" id="description" class="form-control large-input" placeholder="Description" required>
-
-          <br>
-
-          <button type="submit" class="btn btn-success">Submit Post</button>
+      <h2 class="mb-4">Create a New Post</h2>
+      <form action="/makepost" method="POST">
+        <!-- Title field -->
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input
+            type="text"
+            class="form-control"
+            id="title"
+            name="title"
+            placeholder="Enter your post title"
+            required
+          >
+        </div>
+  
+        <!-- Description field -->
+        <div class="mb-3">
+          <label for="description" class="form-label">Description</label>
+          <textarea
+            class="form-control"
+            id="description"
+            name="description"
+            rows="4"
+            placeholder="Write your post content here"
+            required
+          ></textarea>
+        </div>
+  
+        <!-- Optional Photo URL -->
+        <div class="mb-3">
+          <label for="photoUrl" class="form-label">Photo URL (optional)</label>
+          <input
+            type="url"
+            class="form-control"
+            id="photoUrl"
+            name="photoUrl"
+            placeholder="https://example.com/your-image.jpg"
+          >
+        </div>
+  
+        <!-- Submit -->
+        <button type="submit" class="btn btn-success">
+          <i class="bi bi-upload"></i> Submit Post
+        </button>
+        <a href="/main" class="btn btn-secondary ms-2">Cancel</a>
       </form>
     </div>
-    <!-- stuff -->
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -88,7 +102,6 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="../scripts/firebaseAPI_TEAM99.js"></script>
     <script src="../scripts/skeleton.js"></script>
     <script src="../scripts/script.js"></script>
     <script src="../scripts/makepost.js"></script>
