--- a/text/makepost.html
+++ b/text/makepost.html
@@ -33,8 +33,7 @@
     <!-- Make a post container  -->
     <div class="container mt-5">
       <h2 class="mb-4">Create a New Post</h2>
-      <form action="/makepost" method="POST">
-        <!-- Title field -->
+      <form action="/makepost" method="POST" enctype="multipart/form-data">
         <div class="mb-3">
           <label for="title" class="form-label">Title</label>
           <input
@@ -59,26 +58,27 @@
             required
           ></textarea>
         </div>
-  
-        <!-- Optional Photo URL -->
-        <div class="mb-3">
-          <label for="photoUrl" class="form-label">Photo URL (optional)</label>
-          <input
-            type="url"
-            class="form-control"
-            id="photoUrl"
-            name="photoUrl"
-            placeholder="https://example.com/your-image.jpg"
-          >
-        </div>
+
+        <button type="button" id="uploadBtn" class="btn btn-outline-primary">＋</button>
+        <input type="file" id="photo" name="photo" accept="image/*" style="display:none;">
   
         <!-- Submit -->
         <button type="submit" class="btn btn-success">
           <i class="bi bi-upload"></i> Submit Post
         </button>
         <a href="/main" class="btn btn-secondary ms-2">Cancel</a>
+        <div class="mt-3">
+          <img
+            id="photoPreview"
+            src=""
+            alt="Image preview"
+            style="display:none; max-width:100%; height:auto; border:1px solid #ccc; padding:4px;"
+          >
+        </div>
       </form>
     </div>
+
+
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -102,9 +102,9 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="../scripts/skeleton.js"></script>
-    <script src="../scripts/script.js"></script>
-    <script src="../scripts/makepost.js"></script>
+    <script src="/js/skeleton.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/makepost.js"></script>
 
 </body>
 
