--- a/text/editProfile.html
+++ b/text/editProfile.html
@@ -100,7 +100,7 @@
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script> -->
     
-    <script src="./scripts/editProfile.js"></script> 
+    <script src="../scripts/editProfile.js"></script> 
 
 </body>
 
