--- a/text/your_page.html
+++ b/text/your_page.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>My BCIT Project</title>
-  <meta name="comp1800 template" content="My 1800 App">
+  <title>Your page</title>
+  <meta name="comp2800 template" content="My 2800 App">
 
   <!------------------------>
   <!-- Required meta tags -->
