update the profile page

--- a/text/editProfile.html
+++ b/text/editProfile.html
@@ -67,7 +67,7 @@
                     <select id="ageInput" class="form-control" required>
                         <option value="" disabled selected>Select your age</option>
                     </select>
-                </div>
+                </div> 
                 <div class="form-group" style="margin-bottom: 20px;">
                     <label>Gender</label><br>
                     <div style="display: inline-block; margin-right: 20px;">
@@ -100,7 +100,7 @@
     <script src="./scripts/skeleton.js"></script>
     <script src="./scripts/script.js"></script> -->
     
-    <script src="../scripts/editProfile.js"></script> 
+    <script src="/js/editProfile.js"></script> 
 
 </body>
 
