make the editprofile page functional

--- a/text/profile.html
+++ b/text/profile.html
@@ -56,9 +56,9 @@
                   <a href="/editProfile" class="btn btn-outline-dark btn-sm btn-block">Edit profile</a>
                 </div>
                 <div class="media-body mb-5 text-white">
-                  <h4 id="userName"  class="mt-0 mb-0"></h4>
+                  <h4 class="mt-0 mb-0"><span id="name"></span></h4>
                   <p class="small mb-4">
-                    <i id="userLocation" class="fas fa-map-marker-alt mr-2"></i>New York
+                    <i id="userLocation" class="fas fa-map-marker-alt mr-2"></i><span id="location"></span>
                   </p>
                 </div>
               </div>
@@ -91,9 +91,7 @@
             <div class="px-4 py-3">
               <h5 class="mb-0">About me</h5>
               <div class="p-4 rounded shadow-sm bg-light">
-                <p class="font-italic mb-0">Web Developer</p>
-                <p class="font-italic mb-0">Lives in New York</p>
-                <p class="font-italic mb-0">Photographer</p>
+                <p class="font-italic mb-0"><span id="bio"></span>
               </div>
             </div>
             <div class="px-4 py-3" id="dictionary-section">
