--- a/text/editProfile.html
+++ b/text/editProfile.html
@@ -52,15 +52,15 @@
                 </div>
                 <div class="form-group">
                     <label>name</label>
-                    <input type="text" id="nameInput" class="form-control" placeholder="Enter your name">
+                    <input type="text" id="name" name="name" class="form-control" placeholder="Enter your name">
                 </div>
                 <div class="form-group">
                     <label>About me</label>
-                    <input type="text" id="aboutMeInput" class="form-control" placeholder="Write a short bio about yourself">
+                    <input type="text" id="bio" name="bio" class="form-control" placeholder="Write a short bio about yourself">
                 </div>
                 <div class="form-group">
                     <label for="locationInput">Location</label>
-                    <input type="text" id="locationInput" class="form-control" placeholder="Enter your city or country">
+                    <input type="text" id="location" class="form-control" placeholder="Enter your city or country">
                 </div>                
                 <div class="form-group">
                     <label>Age</label>
