--- a/text/weather.html
+++ b/text/weather.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>City Location Data</title>
-    <link rel="stylesheet" href="/2800_202510_BBY07/styles/weather.css">
+    <link rel="stylesheet" href="/css/weather.css">
 </head>
 <body>
     <div class="container">
@@ -11,6 +11,6 @@
         <button onclick="fetchLocation()">Get Location</button>
         <div id="location"></div>
     </div>
-    <script src="/2800_202510_BBY07/scripts/weather.js"></script>
+    <script src="/js/weather.js"></script>
 </body>
 </html>
