--- a/text/weather.html
+++ b/text/weather.html
@@ -7,10 +7,8 @@
 <body>
     <div class="container">
         <h1>City Location Data</h1>
-        <input type="text" id="cityInput" placeholder="Enter city name">
-        <button onclick="fetchLocation()">Get Location</button>
         <div id="location"></div>
-    </div>
+        <div id="weatherinfo">hi</div>
     <script src="/js/weather.js"></script>
 </body>
 </html>
