--- a/text/signup.html
+++ b/text/signup.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <h1>Signup</h1>
+        <div><!--ERROR--></div>
         <form action="/submitUser" method="POST">
             <label for="name">Name:</label>
             <input id="name" name="name" type="text" placeholder="Full name" required>
