--- a/text/main.html
+++ b/text/main.html
@@ -104,7 +104,7 @@
     <!---------------------------------------------->
     <script src="../scripts/firebaseAPI_TEAM99.js"></script>
     <script src="../scripts/skeleton.js"></script>
-    <script src="../scripts/main.js"></script>
+    <script src="/js/main.js"></script>
     <script src="../scripts/script.js"></script>
 
 </body>
