--- a/text/profile.html
+++ b/text/profile.html
@@ -75,14 +75,14 @@
                   <h5 class="font-weight-bold mb-0 d-block">745</h5>
                   <small class="text-muted">
                     <i class="fas fa-user mr-1"></i>
-                    <a href="./followers.html">Followers</a>
+                    <a href="/followers">Followers</a>
                   </small>
                 </li>
                 <li class="list-inline-item">
                   <h5 class="font-weight-bold mb-0 d-block">340</h5>
                   <small class="text-muted">
                     <i class="fas fa-user mr-1"></i>
-                    <a href="./following.html">Following</a>
+                    <a href="/following">Following</a>
                   </small>
                 </li>
               </ul>
