adding style next ask for env

--- a/test.html
+++ b/test.html
@@ -16,5 +16,5 @@
   <div id="messages"></div>
 
 </body>
-<script src="express.js" type="module"></script>
+<script src="/js/express.js" type="module"></script>
 </html>
