Top and bottom nav bar added, and linked to function page

--- a/text/editProfile.html
+++ b/text/editProfile.html
@@ -29,6 +29,7 @@
     <!-------------------------------------------->
     <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
+    <link rel="stylesheet" href="/css/footer.css">
 
 </head>
 
@@ -101,6 +102,7 @@
     <script src="./scripts/script.js"></script> -->
     
     <script src="/js/editProfile.js"></script> 
+    <script src="/js/skeleton.js"></script>
 
 </body>
 
