--- a/text/messages.html
+++ b/text/messages.html
@@ -14,10 +14,13 @@
     </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="/css/messages.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
 </head>
 
 <body>
   <nav id="navbarPlaceholder"></nav>
   <nav id="footerPlaceholder"></nav>
+  <script src="/js/skeleton.js"></script>
 </body>
