--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,6 +1,14 @@
-<!-- Navbar without login -->
-<nav class="navbar navbar-expand-lg navbar-light bg-warning"
-    style="height: 80px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="font-size: 1.8rem; font-weight: bold; color: #2a4d8f;">HUH!</a>
-</nav>
+<div class="navbar">
+    <a href="/notification" class="nav-icon">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="gray" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="28" height="28">
+            <path d="M18 8a6 6 0 0 0-12 0c0 7-3 9-3 9h18s-3-2-3-9"></path>
+            <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+        </svg>
+    </a>
+    <a href="/search" class="nav-icon">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="gray" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="28" height="28">
+            <circle cx="11" cy="11" r="8"></circle>
+            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+        </svg>
+    </a>
+</div>
