--- a/text/notification.html
+++ b/text/notification.html
@@ -35,7 +35,9 @@
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
-    <link rel="stylesheet" href="../styles/notification.css">
+    <link rel="stylesheet" href="/css/notification.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
    
 </head>
 
@@ -66,9 +68,8 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="../scripts/skeleton.js"></script>
-    <script src="../scripts/script.js"></script>
-    <script src="../scripts/notification.js"></script>
+    <script src="/js/skeleton.js"></script>
+    <script src="/js/notification.js"></script>
 
 </body>
 
