--- a/text/profile.html
+++ b/text/profile.html
@@ -30,6 +30,7 @@
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <link rel="stylesheet" href="/css/profile.css">
+    <link rel="stylesheet" href="/css/footer.css">
     
       
 
@@ -129,15 +130,16 @@
           </div>
         </div>
       </div>
+      <nav id="footerPlaceholder"></nav>
     <!-- our own footer goes here
     <nav id="footerPlaceholder"></nav>
     <!-- ------------------------------------------
     Your own JavaScript functions go here   
     <!---------------------------------------------->
     <!-- <script src="../scripts/firebaseAPI_TEAM99.js"></script>
-    <script src="../scripts/skeleton.js"></script>
     <script src="../scripts/authentication.js"></script> -->
     <script src="/js/profile.js"></script> 
+    <script src="/js/skeleton.js"></script>
 
 </body>
 </html> 
