--- a/text/search.html
+++ b/text/search.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Good hunt for slang</title>
     <link rel="stylesheet" href="/css/test.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+
 </head>
 <body>
+  <nav id="navbarPlaceholder"></nav>
     <div class="header">
         <h1>AI tool just type your word</h1>
     </div>
@@ -40,16 +44,12 @@
                 <span></span>
             </div>
         </div>
-        
-        <button class="make-post">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
-                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
-            </svg>
-            Make a Post
-        </button>
-    </div>
 
+    <nav id="footerPlaceholder"></nav>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/js/express.js"></script>
+    <script src="/js/skeleton.js"></script>
+
 </body>
 </html>
