--- a/text/profile.html
+++ b/text/profile.html
@@ -42,6 +42,7 @@
     <!------------------------------>
 
     <!-- navbar -->
+    <nav id="navbarPlaceholder"></nav>
    
 
     <!-- the body of your page goes here -->
@@ -69,7 +70,7 @@
                   <h5 class="font-weight-bold mb-0 d-block">215</h5>
                   <small class="text-muted">
                     <i class="fas fa-image mr-1"></i>
-                    <a href="#">Posts</a>
+                    <a href="#">Likes&Col</a>
                   </small>
                 </li>
                 <li class="list-inline-item">
@@ -108,36 +109,19 @@
                 <h5 class="mb-0">Recent Posts</h5>
                 <a href="#" class="btn btn-link text-muted">Show all</a>
               </div>
-              <div class="row">
-                <div class="col-lg-6 mb-2 pr-lg-1">
-                  <img src="https://images.unsplash.com/photo-1469594292607-7bd90f8d3ba4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                    alt="" class="img-fluid rounded shadow-sm">
-                </div>
-                <div class="col-lg-6 mb-2 pl-lg-1">
-                  <img src="https://images.unsplash.com/photo-1493571716545-b559a19edd14?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                    alt="" class="img-fluid rounded shadow-sm">
-                </div>
-                <div class="col-lg-6 pr-lg-1 mb-2">
-                  <img src="https://images.unsplash.com/photo-1453791052107-5c843da62d97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
-                    alt="" class="img-fluid rounded shadow-sm">
-                </div>
-                <div class="col-lg-6 pl-lg-1">
-                  <img src="https://images.unsplash.com/photo-1475724017904-b712052c192a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80"
-                    alt="" class="img-fluid rounded shadow-sm">
-                </div>
+              <!-- post content goes here -->
+              <div class="row" id="postContainer"></div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <nav id="footerPlaceholder"></nav>
-    <!-- our own footer goes here
+  
+    <!-- our own footer goes here -->
     <nav id="footerPlaceholder"></nav>
     <!-- ------------------------------------------
     Your own JavaScript functions go here   
     <!---------------------------------------------->
-    <!-- <script src="../scripts/firebaseAPI_TEAM99.js"></script>
-    <script src="../scripts/authentication.js"></script> -->
     <script src="/js/profile.js"></script> 
     <script src="/js/skeleton.js"></script>
 
