update the follower and following page

--- a/text/followers.html
+++ b/text/followers.html
@@ -54,7 +54,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a class="avatar avatar-online" href="javascript:void(0)">
-                          <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                          <img src="https://i.pravatar.cc/150?img=4" alt="">
                           <i></i>
                         </a>
                       </div>
@@ -74,7 +74,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a class="avatar avatar-away" href="javascript:void(0)">
-                          <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                          <img src="https://i.pravatar.cc/150?img=3" alt="">
                           <i></i>
                         </a>
                       </div>
@@ -96,7 +96,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a class="avatar avatar-busy" href="javascript:void(0)">
-                          <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                          <img src="https://i.pravatar.cc/150?img=2" alt="">
                           <i></i>
                         </a>
                       </div>
@@ -116,7 +116,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a class="avatar avatar-off" href="javascript:void(0)">
-                          <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                          <img src="https://i.pravatar.cc/150?img=1" alt="">
                           <i></i>
                         </a>
                       </div>
