--- a/text/following.html
+++ b/text/following.html
@@ -54,7 +54,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a class="avatar avatar-online" href="javascript:void(0)">
-                          <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                          <img src="https://i.pravatar.cc/150?img=5"alt="">
                           <i></i>
                         </a>
                       </div>
@@ -74,7 +74,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a class="avatar avatar-away" href="javascript:void(0)">
-                          <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                          <img src="https://i.pravatar.cc/150?img=10" alt="">
                           <i></i>
                         </a>
                       </div>
@@ -94,7 +94,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a class="avatar avatar-busy" href="javascript:void(0)">
-                          <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                          <img src="https://i.pravatar.cc/150?img=7" alt="">
                           <i></i>
                         </a>
                       </div>
@@ -114,7 +114,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a class="avatar avatar-off" href="javascript:void(0)">
-                          <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt="">
+                          <img src="https://i.pravatar.cc/150?img=8" alt="">
                           <i></i>
                         </a>
                       </div>
