--- a/text/inside_messages.html
+++ b/text/inside_messages.html
@@ -14,18 +14,18 @@
     </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/message.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
 </head>
 
 <body class="d-flex flex-column vh-100">
   <nav id="navbarPlaceholder"></nav>
-  <h5 id="conversationTitle" class="text-center py-3 flex-shrink-0">
-    Persons Name
-  </h5>
+  <h5 id="conversationTitle" class="text-center py-3 flex-shrink-0">Person's name</h5>
   <div id="messagesContainer" class="flex-grow-1 overflow-auto px-3 pb-5">
     <div id="messages" class="d-flex flex-column"></div>
   </div>
 
-  <div class="position-fixed bottom-0 start-0 end-0 bg-white border-top p-2">
+  <div class="position-fixed start-0 end-0 bg-white border-top p-2" style="bottom: 63px;" >
     <div class="input-group">
     <textarea id="messageInput" class="form-control rounded-4 me-2" placeholder="Message…"
       rows="1" style="resize: none; overflow: hidden; height: auto;"></textarea>
@@ -38,4 +38,5 @@
   <nav id="footerPlaceholder"></nav>
 
   <script src="/js/messages.js"></script>
+  <script src="/js/skeleton.js"></script>
 </body>
