--- a/text/messages.html
+++ b/text/messages.html
@@ -14,7 +14,7 @@
     </script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
-    <link rel="stylesheet" href="/css/messages.css">
+    <link rel="stylesheet" href="/css/message.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/navbar.css">
 </head>
@@ -33,7 +33,7 @@
   <div class="px-3 py-2 flex-shrink-0 border-bottom">
     <input id="searchConvosInput" type="text" class="form-control" placeholder="Search messages..."/>
   </div>
-  <div id="conversationsList" class="flex-grow-1 overflow-auto p-0"></div>
+  <div id="conversationsList" class="flex-grow-1 overflow-auto p-0 pb-5"></div>
 
   <div id="newConvModal" style=" display: none;
       position: fixed;
