Added notification badge for unread messages to footer

--- a/text/main.html
+++ b/text/main.html
@@ -96,6 +96,7 @@
     <!---------------------------------------------->
     <script src="/js/skeleton.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/footer.js"></script>
 
 </body>
 
