--- a/text/makepost.html
+++ b/text/makepost.html
@@ -107,6 +107,7 @@
     <script src="/js/skeleton.js"></script>
     <script src="/js/script.js"></script>
     <script src="/js/makepost.js"></script>
+    <script src="/js/footer.js"></script>
 
 </body>
 
