--- a/text/profile.html
+++ b/text/profile.html
@@ -124,6 +124,7 @@
     <!---------------------------------------------->
     <script src="/js/profile.js"></script> 
     <script src="/js/skeleton.js"></script>
+    <script src="/js/footer.js"></script>
 
 </body>
 </html> 
