--- a/text/editProfile.html
+++ b/text/editProfile.html
@@ -103,6 +103,7 @@
     
     <script src="/js/editProfile.js"></script> 
     <script src="/js/skeleton.js"></script>
+    <script src="/js/footer.js"></script>
 
 </body>
 
