--- a/text/footer.html
+++ b/text/footer.html
@@ -1,3 +1,4 @@
+<body>
 <div class="footer">
   <a href="/main" class="footer-item">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="gray" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -18,9 +19,11 @@
       </svg>
   </a>
   <a href="/messages" class="footer-item">
+    <span class="icon-wrap" id="messagesLink">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="gray" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <path d="M21 15a2 2 0 0 0-2-2H7l-4 4V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"></path>
       </svg>
+    </span>
   </a>
   <a href="/profile" class="footer-item">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="gray" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -29,3 +32,5 @@
       </svg>
   </a>
 </div>
+
+</body>
