--- a/text/inside_messages.html
+++ b/text/inside_messages.html
@@ -39,4 +39,5 @@
 
   <script src="/js/messages.js"></script>
   <script src="/js/skeleton.js"></script>
+  <script src="/js/footer.js"></script>
 </body>
