--- a/text/messages.html
+++ b/text/messages.html
@@ -62,4 +62,5 @@
 
   <script src="/js/messages.js"></script>
   <script src="/js/skeleton.js"></script>
+  <script src="/js/footer.js"></script>
 </body>
