--- a/text/notification.html
+++ b/text/notification.html
@@ -70,6 +70,7 @@
     <!---------------------------------------------->
     <script src="/js/skeleton.js"></script>
     <script src="/js/notification.js"></script>
+    <script src="/js/footer.js"></script>
 
 </body>
 
