--- a/text/notification.html
+++ b/text/notification.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My BCIT Project</title>
+    <title>Notifications</title>
     <meta name="comp1800 template" content="My 1800 App">
 
     <!------------------------>
@@ -44,7 +44,7 @@
           Mark All as Read
         </button>
       </div>
-      <div id="postsContainer"></div>
+      <div id="notif-list"></div>
     </div>
 
     
