--- a/text/reel.html
+++ b/text/reel.html
@@ -18,6 +18,41 @@
 </head>
 
 <body>
-  <nav id="navbarPlaceholder"></nav>
-  <nav id="footerPlaceholder"></nav>
+
+    <!-- our own navbar goes here -->
+    <nav id="navbarPlaceholder"></nav>
+
+    <div id="posts-go-here" class="row g-4 justify-content-center">
+      <!-- Cards will be injected here -->
+  </div>
+    <!-- Template for cards (not visible) -->
+    <template id="postCardTemplate">
+        <div class="col-md-4 col-sm-6">
+            <div class="card h-100 shadow-sm post-card">
+                <div class="card-body d-flex flex-column">
+                    <h5 class="card-title fw-bold text-primary"></h5>
+                    <p class="card-text text-muted flex-grow-1"></p>
+                    <p class="card-author mb-1 text-dark small fw-semibold"></p>
+                    <p class="card-date mb-2 text-secondary small"></p>
+                    <a href="#" class="btn btn-outline-primary mt-auto read-more-btn">Read More</a>
+                </div>
+            </div>
+        </div>
+    </template>
+
+    <!-- Temporary Button to go to makepost page, Can't see nav yet -->
+    <a href="/makepost" class="btn btn-primary">
+      <i class="bi bi-pencil-square"></i> Make a Post
+    </a>
+
+    <!-- our own footer goes here-->
+    <nav id="footerPlaceholder"></nav>
+
+    <!---------------------------------------------->
+    <!-- Your own JavaScript functions go here    -->
+    <!---------------------------------------------->
+    <script src="../scripts/skeleton.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="../scripts/script.js"></script>
+
 </body>
