--- a/text/main.html
+++ b/text/main.html
@@ -83,8 +83,8 @@
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title fw-bold text-primary"></h5>
                     <p class="card-text text-muted flex-grow-1"></p>
-                    <p class="card-author mb-1 text-dark small fw-semibold"></p>
-                    <p class="card-date mb-2 text-secondary small"></p>
+                    <a class="card-author mb-1 text-dark small fw-semibold"></a>
+                    <p href="" class="card-date mb-2 text-secondary small"></p>
                     <a href="#" class="btn btn-outline-primary mt-auto read-more-btn">Read More</a>
                 </div>
             </div>
