--- a/text/editProfile.html
+++ b/text/editProfile.html
@@ -104,6 +104,7 @@
     <script src="/js/editProfile.js"></script> 
     <script src="/js/skeleton.js"></script>
     <script src="/js/footer.js"></script>
+    <script src="/js/navbar.js"></script>
 
 </body>
 
