--- a/text/main.html
+++ b/text/main.html
@@ -97,6 +97,7 @@
     <script src="/js/skeleton.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/footer.js"></script>
+    <script src="/js/navbar.js"></script>
 
 </body>
 
