--- a/text/makepost.html
+++ b/text/makepost.html
@@ -108,6 +108,7 @@
     <script src="/js/script.js"></script>
     <script src="/js/makepost.js"></script>
     <script src="/js/footer.js"></script>
+    <script src="/js/navbar.js"></script>
 
 </body>
 
