--- a/text/messages.html
+++ b/text/messages.html
@@ -63,4 +63,5 @@
   <script src="/js/messages.js"></script>
   <script src="/js/skeleton.js"></script>
   <script src="/js/footer.js"></script>
+  <script src="/js/navbar.js"></script>
 </body>
