--- a/text/nav_before_login.html
+++ b/text/nav_before_login.html
@@ -1,9 +1,10 @@
 <div class="navbar">
-    <a href="/notification" class="nav-icon">
+    <a href="/notifications" class="nav-icon">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="gray" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="28" height="28">
             <path d="M18 8a6 6 0 0 0-12 0c0 7-3 9-3 9h18s-3-2-3-9"></path>
             <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
         </svg>
+        <span class="notification-badge" id="notifBadge" style="display:none"></span>
     </a>
     <a href="/search" class="nav-icon">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="gray" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" width="28" height="28">
