--- a/text/profile.html
+++ b/text/profile.html
@@ -125,6 +125,7 @@
     <script src="/js/profile.js"></script> 
     <script src="/js/skeleton.js"></script>
     <script src="/js/footer.js"></script>
+    <script src="/js/navbar.js"></script>
 
 </body>
 </html> 
