--- a/text/search.html
+++ b/text/search.html
@@ -50,6 +50,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/js/express.js"></script>
     <script src="/js/skeleton.js"></script>
+    <script src="/js/navbar.js"></script>
+    <script src="/js/footer.js"></script>
 
 </body>
 </html>
