UI fully done, added username displace on main page, the explore btn done

--- a/text/profile.html
+++ b/text/profile.html
@@ -38,6 +38,7 @@
     <!-------------------------------------------->
     <link rel="stylesheet" href="/css/profile.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
     
       
 
@@ -126,9 +127,8 @@
   
     <!-- our own footer goes here -->
     <nav id="footerPlaceholder"></nav>
-    <!-- ------------------------------------------
-    Your own JavaScript functions go here   
-    <!---------------------------------------------->
+
+
     <script src="/js/profile.js"></script> 
     <script src="/js/skeleton.js"></script>
     <script src="/js/footer.js"></script>
