--- a/text/following.html
+++ b/text/following.html
@@ -14,17 +14,25 @@
     <!------------------------------------------>
     <!-- Bootstrap Library CSS JS CDN go here -->
     <!------------------------------------------>
-    <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
-    <script src='https://netdna.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <!-------------------------------------------------------->
     <!-- Firebase 8 Library related CSS, JS, JQuery go here -->
     <!-------------------------------------------------------->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+    <!-------------------------------------------->
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
     <link rel="stylesheet" href="../styles/followers.css">
+    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/navbar.css">
     
       
 
@@ -36,7 +44,7 @@
     <!------------------------------>
 
     <!-- navbar -->
-    <!-- <nav id="navbarPlaceholder"></nav> -->
+    <nav id="navbarPlaceholder"></nav>
 
     <!-- the body of your page goes here -->
     <div class="container">
@@ -136,14 +144,14 @@
         </div>
       </div>
     <!-- our own footer goes here-->
-    <!-- <nav id="footerPlaceholder"></nav> -->
+    <nav id="footerPlaceholder"></nav>
 
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <!-- <script src="../scripts/firebaseAPI_TEAM99.js"></script>
-    <script src="../scripts/skeleton.js"></script>
-    <script src="../scripts/authentication.js"></script>
-    <script src="../scripts/script.js"></script> -->
+    <script src="/js/skeleton.js"></script>
+    <script src="/js/footer.js"></script>
+    <script src="/js/navbar.js"></script>
+
 </body>
 </html>
