--- a/text/search.html
+++ b/text/search.html
@@ -48,6 +48,20 @@
     </h2>
   </div>
 
+  <template id="postCardTemplate">
+    <div class="col-md-4 col-sm-6">
+        <div class="card h-100 shadow-sm post-card">
+            <div class="card-body d-flex flex-column">
+                <h5 class="card-title fw-bold"></h5>
+                <p class="card-text text-muted flex-grow-1"></p>
+                <a class="card-author mb-1 text-dark small fw-semibold"></a>
+                <p href="" class="card-date mb-2 text-secondary small"></p>
+                <a href="#" class="read-more-btn"><span class="gradient-text">Read More</span></a>
+            </div>
+        </div>
+    </div>
+  </template>
+
   <!-- Result Section -->
   <div class="container results-section">
     <div id="result-content">
@@ -58,6 +72,9 @@
         <p class="placeholder-text">
           Hunt for a slang term to see its definition here...
         </p>
+      </div>
+      <div class="container mt-4">
+        <div class="row g-4 justify-content-center" id="post-search-results"></div>
       </div>
     </div>
     <div class="loading" id="loading">
