Game page added, ui fixed

--- a/text/followers.html
+++ b/text/followers.html
@@ -29,7 +29,7 @@
     <!-------------------------------------------->
     <!-- Other libraries and styles of your own -->
     <!-------------------------------------------->
-    <link rel="stylesheet" href="../styles/followers.css">
+    <link rel="stylesheet" href="/css/followers.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/navbar.css">
     
