--- a/text/footer.html
+++ b/text/footer.html
@@ -6,7 +6,7 @@
           <polyline points="9 22 9 12 15 12 15 22"></polyline>
       </svg>
   </a>
-  <a href="/reel" class="footer-item">
+  <a href="/game" class="footer-item">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="gray" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
           <rect x="2" y="3" width="20" height="18" rx="2" ry="2"></rect>
           <path d="M16 3v4M8 3v4M2 9h20"></path>
